Fix .star-rating being not clickable after form validation
Due to the feedback for the star rating being position via margins it
was covering the star rating.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1094,6 +1094,7 @@ footer {
     flex-direction: row-reverse;
     justify-content: flex-end;
     text-align: left;
+    z-index: 2
 }
 
 .star-rating>input {
